--- a/docker-compose/docker-compose-dev.yml
+++ b/docker-compose/docker-compose-dev.yml
@@ -27,6 +27,8 @@ services:
       service: sig-provider
 
   stats-db:
+    depends_on:
+      - db
     image: postgres:14
     restart: always
     container_name: 'stats-postgres'
@@ -40,7 +42,6 @@ services:
 
 
   stats:
-    platform: linux/x86_64
     depends_on:
       - stats-db
     image: ghcr.io/blockscout/stats:${STATS_DOCKER_TAG:-main}
