--- a/docker-compose/proxy/default.conf.template
+++ b/docker-compose/proxy/default.conf.template
@@ -3,7 +3,7 @@ server {
     server_name  localhost;
     proxy_http_version 1.1;
     location / {
-        proxy_pass          http://frontend:3000;
+        proxy_pass          ${FRONT_PROXY_PASS};
     }
     location /socket/v2 {
         proxy_pass http://backend:4000;
