--- a/docker-compose/services/docker-compose-nginx.yml
+++ b/docker-compose/services/docker-compose-nginx.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:  
   proxy:
     image: nginx
+    container_name: proxy
     volumes:
-      - type: bind
-        source: ../proxy/nginx.conf
-        target: /etc/nginx/conf.d/default.conf
-        read_only: true
+      - "../proxy:/etc/nginx/templates"
+    environment:
+      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend:3000}
     ports:
       - 80:80
       - 81:81
